# candy-ass

./: .env.example  .gitignore  .tarpaulin.toml  Cargo.toml  readme.md
.github/workflows/: ci.yml
candy-ass-backtest/: Cargo.toml  docker-compose.yml
candy-ass-backtest/src/: application.rs  config.rs  integrations.rs  lib.rs  mocks.rs
candy-ass-backtest/src/application/: history_downloader.rs  history_reproducer.rs
candy-ass-backtest/src/application/history_downloader/: candlesticks_downloader_actor.rs
candy-ass-backtest/src/application/history_downloader/candlesticks_downloader_actor/: commands.rs  errors.rs
candy-ass-backtest/src/application/history_downloader/candlesticks_downloader_actor/commands/: download_candlesticks.rs  shutdown.rs
candy-ass-backtest/src/application/history_reproducer/: candlesticks_reproducer_actor.rs
candy-ass-backtest/src/application/history_reproducer/candlesticks_reproducer_actor/: commands.rs  errors.rs
candy-ass-backtest/src/integrations/: clickhouse.rs
candy-ass-backtest/src/integrations/clickhouse/: candlesticks_repository.rs  model.rs
candy-ass-backtest/src/integrations/clickhouse/candlesticks_repository/: read_service.rs  write_service.rs
candy-ass-backtest/src/integrations/clickhouse/model/: candlestick_row.rs
candy-ass-backtest/src/mocks/: mock_clickhouse.rs  mock_docker_clickhouse.rs
candy-ass-backtest/tests/: application.rs  default.yaml  e2e.rs  integrations.rs
candy-ass-backtest/tests/application/: actors.rs
candy-ass-backtest/tests/application/actors/: test_candlesticks_downloader_actor.rs  test_candlesticks_reproducer_actor.rs
candy-ass-backtest/tests/e2e/: smoke_test.rs
candy-ass-backtest/tests/integrations/: clickhouse.rs
candy-ass-backtest/tests/integrations/clickhouse/: candlesticks_repository.rs
candy-ass-core/: Cargo.toml
candy-ass-core/src/: application.rs  domain.rs  integrations.rs  lib.rs  mocks.rs  utils.rs
candy-ass-core/src/application/: actors.rs
candy-ass-core/src/domain/: candlestick.rs  exchange_type.rs  symbol.rs  timeframe.rs
candy-ass-core/src/integrations/: http.rs
candy-ass-core/src/mocks/: fixtures.rs  mock_binance_spot.rs
candy-ass-core/tests/: application.rs
(+17 files in other folders)
